syntax = "proto3";
package session;
option go_package = "./api";

message SessionID{
    string Sessionid = 1;
}

message SessionData{
    SessionID sessionID = 1;
    string Email = 2;
    string Firstname = 3;
    string Lastname = 4;
    string Membersince = 5;
}

message Empty{

}

message String{
    string Data = 1;
}

service SessionManagement{
    rpc GetSessionInfo(SessionID) returns (String){}
    rpc SetSession(SessionData) returns (Empty){}
}